tests/profile/error/property/wrongvalue_type.profile
{
  "version": { "major": 1, "minor": 0 },
  "properties": [
    {
      "type": "unknown-set-property-command",
      "name": "property_name_1",
      "value": "property_value_1"
    }
  ]
}
